@@ -1,5 +1,8 @@
 From ucommon 0.9.1 to 0.9.2
 - fix critical bug in Socket::equal tests...
+- use std::runtime_exception instead of abort when using c++ runtime library
+- crit macro allows std::runtime_exception processing for c++ runtime library
+- check for old and new style c++ stream i/o classes
 
 From ucommon 0.9.0 to 0.9.1
 - removed AutoObject
